filter ui and button alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -566,8 +566,22 @@ body {
 .filter-row .MuiInput-underline:before, .MuiInput-underline:hover:not(.Mui-disabled):before, .MuiInput-underline:after{
     border-bottom: 0 !important;
 }
+.MuiPaper-root{
+    top:275px !important;
+}
+.MuiPopover-paper{
+    box-shadow: 0px 0px 2px rgb(0 0 0 / 25%) !important;
+    border-radius: 2px !important;
+}
 .MuiSelect-select:focus{
-    background-color: transparent;
+    background-color: transparent !important;
+}
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle{
+    background-color: #239EC5;
+    border-color: #239EC5;
+}
+.btn-primary.disabled, .btn-primary:disabled{
+    border-color: #239EC5;
 }
 .modal-cover .form-control{
     height: 44px;
